# Riftcaller

./: .gcloudignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  cloudbuild.yaml  justfile  riftcaller.code-workspace
crates/adventure_display/: Cargo.toml
crates/adventure_display/src/: adventure_display.rs  adventure_loading.rs  adventure_over_panel.rs  adventure_panels.rs  draft_panel.rs  draft_prompt_panel.rs  explore_panel.rs  full_screen_image_panel.rs  lib.rs  shop_panel.rs  shop_prompt_panel.rs  tile_image_panel.rs  tile_prompt_panel.rs
crates/adventure_generator/: Cargo.toml
crates/adventure_generator/src/: adventure_generator.rs  card_generator.rs  lib.rs  mock_adventure.rs
crates/cards_codegen/: Cargo.toml
crates/cards_codegen/src/: cards_codegen.rs
crates/deck_card/: Cargo.toml
crates/deck_card/src/: card_nameplate.rs  deck_card.rs  deck_card_icon.rs  deck_card_name.rs  deck_card_slot.rs  deck_card_text.rs  deck_card_title.rs  lib.rs
crates/deck_editor/: Cargo.toml
crates/deck_editor/src/: card_list.rs  card_list_card_name.rs  collection_browser.rs  collection_controls.rs  create_deck.rs  deck_card.rs  deck_card_list.rs  deck_card_title.rs  deck_edit_options.rs  deck_editor_actions.rs  deck_editor_card.rs  deck_editor_card_title.rs  deck_editor_panel.rs  deck_editor_prompt.rs  deck_list.rs  deck_name.rs  deck_panel.rs  deck_tile.rs  decks_browser.rs  empty_card.rs  lib.rs  pick_deck_name.rs  pick_deck_school.rs  pick_deck_side.rs  player_decks_browser.rs  ui_card.rs
crates/panel_address/: Cargo.toml
crates/panel_address/src/: lib.rs  panel_address.rs
crates/panels/: Cargo.toml
crates/panels/src/: about_panel.rs  adventure_menu.rs  adventure_over_panel.rs  button_menu.rs  debug_panel.rs  disclaimer_panel.rs  game_menu_panel.rs  game_over_panel.rs  lib.rs  loading_panel.rs  main_menu_panel.rs  set_player_name_panel.rs  settings_panel.rs
crates/routing/: Cargo.toml
crates/routing/src/: lib.rs  routing.rs
crates/screen_overlay/: Cargo.toml
crates/screen_overlay/src/: lib.rs  screen_overlay.rs
src/actions/: Cargo.toml
src/actions/src/: action_flags.rs  actions.rs  game_effect_actions.rs  legal_actions.rs
src/adapters/: Cargo.toml
src/adapters/src/: adapters.rs  response_builder.rs
src/assets/: Cargo.toml
src/assets/src/: assets.rs  rexard_images.rs
src/card_helpers/: Cargo.toml
src/card_helpers/src/: abilities.rs  card_helpers.rs  card_predicates.rs  card_selector_prompt_builder.rs  combat_abilities.rs  costs.rs  delegates.rs  effects.rs  face_up_or_down.rs  history.rs  in_play.rs  play_card_browser_builder.rs  projects.rs  raids.rs  requirements.rs  show_prompt.rs  text.rs  text_helpers.rs  text_macro.rs  text_macro2.rs  this.rs  triggers.rs  updates.rs  visual_effects.rs
src/cards_codegen/: Cargo.toml
src/cards_codegen/src/: cards_codegen.rs
src/character_appearance/: Cargo.toml
src/character_appearance/src/: lib.rs  preset_characters.rs
src/core_ui/: Cargo.toml
src/core_ui/src/: action_builder.rs  actions.rs  animations.rs  bottom_sheet_content.rs  button.rs  component.rs  conditional.rs  design.rs  draggable.rs  drop_target.rs  flexbox.rs  full_screen_image.rs  full_screen_loading.rs  icons.rs  interface_animations.rs  lib.rs  list_cell.rs  panel_window.rs  panels.rs  prelude.rs  prompt_panel.rs  safe_screen.rs  scroll_view.rs  slider.rs  style.rs  text.rs  text_field.rs
src/database/: Cargo.toml
src/database/src/: database.rs  firestore_database.rs  sled_database.rs
src/deck_card/: Cargo.toml
src/deck_card/src/: deck_card.rs  deck_card_name.rs  deck_card_rarity.rs  deck_card_slot.rs  deck_card_text.rs
src/deck_editor/: Cargo.toml
src/deck_editor/src/: card_list.rs  card_list_card_name.rs  collection_browser.rs  deck_editor_actions.rs  deck_editor_panel.rs  deck_editor_prompt.rs  editor_column_scroll.rs  lib.rs
src/decklists/: Cargo.toml
src/decklists/src/: decklists.rs
src/dispatcher/: Cargo.toml
src/dispatcher/src/: adventure_dispatch.rs  dispatch.rs  lib.rs
src/display/: Cargo.toml
src/display/src/: animations.rs  button_prompt.rs  card_browser.rs  card_button_prompt.rs  card_selector.rs  card_sync.rs  custom_card_views.rs  game_over.rs  interface.rs  lib.rs  play_card_browser.rs  positions.rs  render.rs  room_selector_prompt.rs  set_display_preference.rs  status_markers.rs  sync.rs  tutorial_display.rs
src/element_names/: Cargo.toml
src/element_names/src/: element_names.rs
src/game_tables/: Cargo.toml
src/game_tables/src/: card_filters_table.rs  csv_datatypes.rs  game_tables.rs  narrative_event_details.csv  narrative_events_table.rs
src/logging/: Cargo.toml
src/logging/src/: logging.rs
src/macros/: Cargo.toml
src/macros/src/: macros.rs
src/panel_address/: Cargo.toml
src/panel_address/src/: panel_address.rs
src/plugin/: Cargo.toml
src/plugin/src/: plugin.rs
tests/: Cargo.toml
tests/benches/: benchmarks.rs
tests/tests/: main.rs
tests/tests/adventure/: battle_tests.rs  deck_editor_tests.rs  draft_tests.rs  explore_tests.rs  mod.rs  shop_tests.rs
tests/tests/ai/: mod.rs  monte_carlo_tests.rs  tree_search_tests.rs
tests/tests/cards/: mod.rs  weapon_tests.rs
tests/tests/cards_amethyst/: artifacts_amethyst_tests.rs  champion_riftcallers_amethyst_tests.rs  champion_spells_amethyst_tests.rs  chapters_amethyst_tests.rs  iftcallers_amethyst_tests.rs  minions_amethyst_tests.rs  mod.rs  overlord_riftcallers_amethyst_tests.rs  overlord_spells_amethyst_tests.rs  projects_amethyst_tests.rs  rituals_amethyst_tests.rs  schemes_amethyst_tests.rs  spells_amethyst_tests.rs  weapons_amethyst_tests.rs
tests/tests/cards_basic/: champion_basics_tests.rs  covenant_basics_tests.rs  mod.rs  overlord_basics_tests.rs  riftcaller_basics_tests.rs
tests/tests/cards_beryl/: allies_beryl_tests.rs  artifacts_beryl_tests.rs  champion_spells_beryl_tests.rs  chapters_beryl_tests.rs  evocations_beryl_tests.rs  minions_beryl_tests.rs  mod.rs  projects_beryl_tests.rs  riftcallers_beryl_tests.rs  rituals_beryl_tests.rs  schemes_beryl_tests.rs  spells_beryl_tests.rs
(+1109 files in other folders)
