cargo-features = ["named-profiles"]

[workspace]
members = ["crates/*", "crates/cards/cards_test", "crates/cards/cards_all"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.fast]
# Disabling debug info speeds up builds a bunch, use this if you don't
# use the debugger
inherits = "dev"
debug = 0

[profile.release]
lto = true
