cargo-features = ["named-profiles"]

[workspace]
members = ["src/*", "src/cards/*", "src/ai/*", "src/adventure/*", "src/data/*", "tests"]
exclude = ["src/cards", "src/ai", "src/adventure", "src/data"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.fast]
# Disabling debug info speeds up builds a bunch, use this if you don't
# use the debugger
inherits = "dev"
debug = 0

[profile.release]
lto = true
