[package]
name = "tests"
version = "0.0.0"
homepage = "https://github.com/thurn/spelldawn"
description = "Tests for spelldawn"
license = "Apache-2.0"
edition = "2021"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
actions = { path = "../src/actions", version = "0.0.0" }
adventure_data = { path = "../src/data/adventure_data", version = "0.0.0" }
adventure_generator = { path = "../src/adventure/adventure_generator", version = "0.0.0" }
ai_core = { path = "../src/ai/ai_core", version = "0.0.0" }
ai_game_integration = { path = "../src/ai/ai_game_integration", version = "0.0.0" }
ai_monte_carlo = { path = "../src/ai/ai_monte_carlo", version = "0.0.0" }
ai_testing = { path = "../src/ai/ai_testing", version = "0.0.0" }
ai_tree_search = { path = "../src/ai/ai_tree_search", version = "0.0.0" }
cards_all = { path = "../src/cards/cards_all", version = "0.0.0" }
cards_test = { path = "../src/cards/cards_test", version = "0.0.0" }
core_ui = { path = "../src/core_ui", version = "0.0.0" }
decklists = { path = "../src/decklists", version = "0.0.0" }
element_names = { path = "../src/element_names", version = "0.0.0" }
game_data = { path = "../src/data/game_data", version = "0.0.0" }
protos = { path = "../src/protos", version = "0.0.0" }
rules = { path = "../src/rules", version = "0.0.0" }
test_utils = { path = "../src/test_utils", version = "0.0.0" }
test_constants = { path = "../src/test_constants", version = "0.0.0" }
user_action_data = { path = "../src/data/user_action_data", version = "0.0.0" }

tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
anyhow = { features = ["backtrace"], version = "1.0.75" }


[dev-dependencies]
insta = "1.28.0"
rusty-hook = "0.11.2"
maplit = "1.0.2"
criterion = "0.4.0"
