[package]
name = "adventure_display"
version = "0.0.0"
description = "Implements rendering for the 'adventure' deckbuilding/drafting game mode"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0.138", features = ["derive"] }

adapters = { path = "../adapters", version = "0.0.0"}
core_ui = { path = "../core_ui", version = "0.0.0"}
data = { path = "../data", version = "0.0.0" }
panel_address = { path = "../panel_address", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
