[package]
name = "adventure_generator"
version = "0.0.0"
description = "Generates world maps for the 'adventure' game mode"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0.138", features = ["derive"] }

data = { path = "../data", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
