[package]
name = "adventure_generator"
version = "0.0.0"
description = "Generates world maps for the 'adventure' game mode"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/adventure_generator.rs"
test = false
doctest = false

[dependencies]

data = { path = "../data", version = "0.0.0" }
