[package]
name = "deck_card"
version = "0.0.0"
description = "Renders cards as they're seen in the deck editor and adventure UI"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/deck_card.rs"
test = false
doctest = false

[dependencies]
core_ui = { path = "../core_ui", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
