[package]
name = "deck_editor"
version = "0.0.0"
description = "Renders the deck editor window"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
assets = { path = "../assets", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
deck_card = { path = "../deck_card", version = "0.0.0" }
panel_address = { path = "../panel_address", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
screen_overlay = { path = "../screen_overlay", version = "0.0.0" }

anyhow = "1.0.58"
protos = { path = "../protos", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
