[package]
name = "panel_address"
version = "0.0.0"
description = "Addresses for interface panels"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/panel_address.rs"
test = false
doctest = false

[dependencies]
core_ui = { path = "../core_ui", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }

serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
