[package]
name = "panels"
version = "0.0.0"
description = "Renders user interface panels, game menus, windows, etc"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
adapters = { path = "../adapters", version = "0.0.0" }
adventure_display = { path = "../adventure_display", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
deck_editor = { path = "../deck_editor", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0" }
panel_address = { path = "../panel_address", version = "0.0.0" }

anyhow = "1.0.58"
enum-iterator = "1.1.3"
protos = { path = "../protos", version = "0.0.0" }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
with_error = { path = "../with_error", version = "0.0.0" }
