[package]
name = "screen_overlay"
version = "0.0.0"
description = "Implements the 'chrome' UI elements which display on top of everything else and provide navigation"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/screen_overlay.rs"
test = false
doctest = false

[dependencies]
core_ui = { path = "../core_ui", version = "0.0.0"}
data = { path = "../data", version = "0.0.0" }
panel_address = { path = "../panel_address", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
