[package]
name = "actions"
version = "0.0.0"
description = "Top-level routing for user actions"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/actions.rs"
doctest = false
test = false

[dependencies]
anyhow = "1.0.69"
tracing = "0.1.37"
enum-iterator = "1.3.0"

game_data = { path = "../data/game_data", version = "0.0.0" }
raids = { path = "../raids", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
