[package]
name = "actions"
version = "0.0.0"
description = "Top-level routing for user actions"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/actions.rs"
doctest = false
test = false

[dependencies]
constants = { path = "../constants", version = "0.0.0" }
game_data = { path = "../data/game_data", version = "0.0.0" }
dispatcher = { path = "../dispatcher", version = "0.0.0" }
card_definition_data = { path = "../data/card_definition_data", version = "0.0.0" }
core_data = { path = "../data/core_data", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
raid_display = { path = "../raid_display", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }

anyhow = { features = ["backtrace"], version = "1.0.75" }
tracing = "0.1.37"
enum-iterator = "1.3.0"
