[package]
name = "adapters"
version = "0.0.0"
description = "Helpers for converting between server & client data formats"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/adapters.rs"
doctest = false
test = false

[dependencies]
anyhow = { features = ["backtrace"], version = "1.0.75" }

adventure_data = { path = "../data/adventure_data", version = "0.0.0" }
game_data = { path = "../data/game_data", version = "0.0.0" }
core_data = { path = "../data/core_data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
