[package]
name = "assets"
version = "0.0.0"
description = "Provides addressable asset URLs for game content"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/assets.rs"
doctest = false
test = false

[dependencies]
game_data = { path = "../data/game_data", version = "0.0.0" }
core_data = { path = "../data/core_data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0"}

enumset = { version = "1.1.3", features = ["serde"] }