[package]
name = "card_helpers"
version = "0.0.0"
description = "Utilities to simplify defining cards"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/card_helpers.rs"
test = false
doctest = false

[dependencies]
anyhow = "1.0.58"

game_data = { path = "../data/game_data", version = "0.0.0" }
raids = { path = "../raids", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
