[package]
name = "card_helpers"
version = "0.0.0"
description = "Utilities to simplify defining cards"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/card_helpers.rs"
test = false
doctest = false

[dependencies]
prompt_ui = { path = "../prompt_ui", version = "0.0.0" }
card_definition_data = { path = "../data/card_definition_data", version = "0.0.0" }
game_data = { path = "../data/game_data", version = "0.0.0" }
core_data = { path = "../data/core_data", version = "0.0.0" }
raid_state = { path = "../raid_state", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }

anyhow = { features = ["backtrace"], version = "1.0.75" }
enumset = { version = "1.1.3", features = ["serde"] }