[package]
name = "cards_codegen"
version = "0.0.0"
description = "Finds card definitions and generates initialization code for them"
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "update_cards"
path = "src/cards_codegen.rs"
test = false

[dependencies]
anyhow = "1.0.69"
regex = "1.7.1"
walkdir = "2.3.2"
