[package]
name = "database"
version = "0.0.0"
description = "Core database implementation, handles querying and storing game state"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/database.rs"
doctest = false
test = false

[dependencies]
game_data = { path = "../data/game_data", version = "0.0.0" }
player_data = { path = "../data/player_data", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }

async-trait = "0.1.64"
anyhow = { features = ["backtrace"], version = "1.0.75" }
firestore = "0.28.0"
once_cell = "1.17.1"
serde_json = "1.0.93"
sled = "0.34.7"
