[package]
name = "deck_card"
version = "0.0.0"
description = "Renders cards as they're seen in the deck editor and adventure UI"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/deck_card.rs"
test = false
doctest = false

[dependencies]
adapters = { path = "../adapters", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
element_names = { path = "../element_names", version = "0.0.0" }
game_data = { path = "../data/game_data", version = "0.0.0" }
core_data = { path = "../data/core_data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
