[package]
name = "deck_editor"
version = "0.0.0"
description = "Renders the deck editor window"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
adapters = { path = "../adapters", version = "0.0.0" }
adventure_actions = { path = "../adventure/adventure_actions", version = "0.0.0" }
adventure_data = { path = "../data/adventure_data", version = "0.0.0" }
assets = { path = "../assets", version = "0.0.0" }
core_data = { path = "../data/core_data", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0" }
deck_card = { path = "../deck_card", version = "0.0.0" }
element_names = { path = "../element_names", version = "0.0.0" }
game_data = { path = "../data/game_data", version = "0.0.0" }
panel_address = { path = "../panel_address", version = "0.0.0" }
player_data = { path = "../data/player_data", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
screen_overlay = { path = "../screen_overlay", version = "0.0.0" }
user_action_data = { path = "../data/user_action_data", version = "0.0.0" }

anyhow = { features = ["backtrace"], version = "1.0.75" }
protos = { path = "../protos", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }
