[package]
name = "display"
version = "0.0.0"
description = "Converts internal game state representation into a format the client can understand"
license = "Apache-2.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
actions = { path = "../actions", version = "0.0.0" }
assets = { path = "../assets", version = "0.0.0" }
adapters = { path = "../adapters", version = "0.0.0" }
raid_state = { path = "../raid_state", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
rules_text = { path = "../rules_text", version = "0.0.0" }
constants = { path = "../constants", version = "0.0.0" }
card_definition_data = { path = "../data/card_definition_data", version = "0.0.0" }
dispatcher = { path = "../dispatcher", version = "0.0.0" }
game_data = { path = "../data/game_data", version = "0.0.0" }
core_data = { path = "../data/core_data", version = "0.0.0" }
panel_address = { path = "../panel_address", version = "0.0.0" }
panels = { path = "../panels", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0"}
prompt_ui = { path = "../prompt_ui", version = "0.0.0" }
with_error = { path = "../with_error", version = "0.0.0" }

anyhow = { features = ["backtrace"], version = "1.0.75" }
enum-iterator = "1.3.0"
