[package]
name = "element_names"
version = "0.0.0"
description = "Unique identifiers for UI elements"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/element_names.rs"
doctest = false
test = false

[dependencies]
data = { path = "../data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
