[package]
name = "macros"
version = "0.0.0"
description = "Macros used throughout the project"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true
path = "src/macros.rs"
test = false
doctest = false

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["parsing", "extra-traits", "visit"] }
