[package]
name = "panel_address"
version = "0.0.0"
description = "Addresses for interface panels"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/panel_address.rs"
test = false
doctest = false

[dependencies]
adventure_data = { path = "../data/adventure_data", version = "0.0.0" }
core_ui = { path = "../core_ui", version = "0.0.0" }
game_data = { path = "../data/game_data", version = "0.0.0" }
core_data = { path = "../data/core_data", version = "0.0.0" }
player_data = { path = "../data/player_data", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }

enum-kinds = "0.5.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
