[package]
name = "plugin"
version = "0.0.0"
description = "Unity native plugin for spelldawn"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/plugin.rs"
test = false
doctest = false
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.58"
prost = "0.10.4"

cards_all = { path = "../cards/cards_all", version = "0.0.0" }
database = { path = "../database", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
server = { path = "../server", version = "0.0.0" }
