[package]
name = "plugin"
version = "0.0.0"
description = "Unity native plugin for spelldawn"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/plugin.rs"
test = false
doctest = false
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.69"
once_cell = "1.17.1"
prost = "0.11.6"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

cards_all = { path = "../cards/cards_all", version = "0.0.0" }
database = { path = "../database", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
server = { path = "../server", version = "0.0.0" }
