[package]
name = "plugin"
version = "0.0.0"
description = "Unity native plugin for spelldawn"
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/plugin.rs"
test = false
doctest = false
crate-type = ["cdylib", "staticlib"]

[dependencies]
cards_all = { path = "../cards/cards_all", version = "0.0.0" }
database = { path = "../database", version = "0.0.0" }
logging = { path = "../logging", version = "0.0.0" }
protos = { path = "../protos", version = "0.0.0" }
server = { path = "../server", version = "0.0.0" }

anyhow = "1.0.69"
once_cell = "1.17.1"
prost = "0.11.6"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1.37", features = ["max_level_debug"] }
tracing-appender = "0.2.2"
tracing-forest = { version = "0.1.5", features = ["env-filter", "tokio"] }
tracing-subscriber = "0.3.16"
